<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context="com.bradym.android.mathdokusolverplus.PuzzleSelect">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MATHDOKU"
            android:id="@+id/button4x4"
            android:layout_alignParentTop="true"
            android:onClick="kenkenSizeSelect"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SUDOKU"
            android:id="@+id/buttonSudoku"
            android:onClick="sudokuSelect"
            android:layout_below="@+id/button4x4"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSudoku"
            android:orientation="horizontal"
            android:weightSum="5"
            android:visibility="gone"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="JET"
                android:textSize="13sp"
                android:id="@+id/buttonSecret1"
                android:onClick="debug"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="FUEL"
                android:textSize="13sp"
                android:id="@+id/buttonSecret2"
                android:onClick="debug" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="MELTS"
                android:textSize="13sp"
                android:id="@+id/buttonSecret3"
                android:onClick="debug" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="STEEL"
                android:textSize="13sp"
                android:id="@+id/buttonSecret4"
                android:onClick="debug" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="BEAMS"
                android:textSize="13sp"
                android:id="@+id/buttonSecret5"
                android:onClick="debug" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PUZZLE_SELECT"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
